compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__imported_ok.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 506
expression: "import gleam\npub type X {\n  Ok\n}\npub fn func(x) {\n  case gleam.Ok {\n    _ if [] == [ gleam.Ok ] -> True\n    _ -> False\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
import gleam
pub type X {
  Ok
}
pub fn func(x) {
  case gleam.Ok {
    _ if [] == [ gleam.Ok ] -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import * as $gleam from "../gleam.mjs";
import { Ok, toList, CustomType as $CustomType, isEqual } from "../gleam.mjs";

export class Ok extends $CustomType {}
export const X$Ok = () => new Ok();
export const X$isOk = (value) => value instanceof Ok;

export function func(x) {
  let $ = (var0) => { return new $gleam.Ok(var0); };
  if (isEqual(toList([]), toList([(var0) => { return new Ok(var0); }]))) {
    return true;
  } else {
    return false;
  }
}
