compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__int_division.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 538
expression: "\npub fn main() {\n  case 5 / 2 {\n    x if x == 5 / 2 -> True\n    _ -> False\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case 5 / 2 {
    x if x == 5 / 2 -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import { divideInt } from "../gleam.mjs";

export function main() {
  let $ = globalThis.Math.trunc(5 / 2);
  let x = $;
  if (x === (divideInt(5, 2))) {
    return true;
  } else {
    return false;
  }
}
