compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__int_remainder.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 568
expression: "\npub fn main() {\n  case 4 % 0 {\n    x if x == 4 % 0 -> True\n    _ -> False\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case 4 % 0 {
    x if x == 4 % 0 -> True
    _ -> False
  }
}


----- COMPILED JAVASCRIPT
import { remainderInt } from "../gleam.mjs";

export function main() {
  let $ = 0;
  let x = $;
  if (x === (remainderInt(4, 0))) {
    return true;
  } else {
    return false;
  }
}
