compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__module_access.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 340
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == hero.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
snapshot_kind: text
---
----- SOURCE CODE

          import hero
          pub fn main() {
            let name = "Tony Stark"
            case name {
              n if n == hero.ironman.name -> True
              _ -> False
            }
          }
        

----- COMPILED JAVASCRIPT
import * as $hero from "../../package/hero.mjs";

export function main() {
  let name = "Tony Stark";
  let n = name;
  if (n === $hero.ironman.name) {
    return true;
  } else {
    return false;
  }
}
