compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case_clause_guards__module_access_aliased.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case_clause_guards.rs
assertion_line: 392
expression: "\n          import hero/submodule as myhero\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == myhero.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
snapshot_kind: text
---
----- SOURCE CODE

          import hero/submodule as myhero
          pub fn main() {
            let name = "Tony Stark"
            case name {
              n if n == myhero.ironman.name -> True
              _ -> False
            }
          }
        

----- COMPILED JAVASCRIPT
import * as $myhero from "../../package/hero/submodule.mjs";

export function main() {
  let name = "Tony Stark";
  let n = name;
  if (n === $myhero.ironman.name) {
    return true;
  } else {
    return false;
  }
}
